1. Table layout fix 2. Removed scrollbars 3. Fixed button panel 4. Auto-scroll to row 5. Fire status update

--- a/Front/src/assets/main.css
+++ b/Front/src/assets/main.css
@@ -4,3 +4,16 @@ html, body, #app {
     height: 100%;
     width: 100%;
 }
+
+.ol-overlaycontainer-stopevent {
+    padding: 10px;
+}
+
+.ol-zoom-in {
+    margin-bottom: 2px;
+}
+
+.ol-zoom-out {
+    position: relative;
+    left: 2px;
+}
